--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,10 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v13.0&appId=1099784044200990&autoLogAppEvents=1"
+    nonce="XYJbRO9h"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
